tooling/nargo_cli/tests/snapshots/execution_success/regression_9047/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "string",
        "length": 2
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0, _1]",
    "EXPR [ (1, _0) -111 ]",
    "EXPR [ (1, _1) -107 ]"
  ],
  "debug_symbols": "jZDdCoMwDIXfpde9WPePrzKGxBqlENoSW2GI774ournBYFfpydfvQDuoGqvcls43oVPFbVAVOyLXlhQsJBe8bIdRqzWWiRFlpTZcrAiMPqnCZyKteqA8X+oi+HkmYKE7rdDXMqWwcYTTadRve/dbNeawyGZvXvrpb/98XPTL9cO+SwLr+Pu9PbCDinCJTfZ2Q9MjrmT9r8jBYp0Zp6aZSfcT",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
