tooling/nargo_cli/tests/snapshots/execution_success/regression_9047/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "string",
        "length": 2
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0, _1]",
    "EXPR [ (1, _0) -111 ]",
    "EXPR [ (1, _1) -107 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc99sBt78VfGkFijFEJbYisM8d8XRTcZ+JTenJ5LO0NHbRkaH/o4Qv2coRXP7IeGo8PsY9DtvBg4YpOFSFdw4molFAoZ6lCYDUzIZbs0JgzbzChKKwMUOp1a2Hum9bSYn11dq9bed9ne7Fd/qP/ShM7L/4snFI8t0x77EtyJ5nc6yPHjJNFRV4TWpo1p9wc=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
