tooling/nargo_cli/tests/snapshots/execution_success/regression_9047/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[regression_9047] Circuit output: "ok"
